# qtui

./: CMakeLists.txt  LICENSE  README.md  install_ubuntu.sh  run.sh
src/: main.cpp  plusminus.cpp  plusminus.h
